# isochron

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Kconfig  Makefile  README.md  brief.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
configs/boards/: btt-pico.toml  custom-rp2040.toml.example  pico.toml
configs/displays/: v0-mini.toml
configs/machines/: default.toml
configs/machines/examples/: ac-motor-basic.toml  dc-motor-basic.toml
displays/isochron-display/: Cargo.toml  README.md
displays/isochron-display-fw/: Cargo.toml  README.md  memory.x
displays/isochron-display-fw/.cargo/: config.toml
displays/isochron-display-fw/src/: encoder.rs  font.rs  main.rs  protocol.rs  sh1106.rs
displays/isochron-display/src/: backend.rs  input.rs  lib.rs  screen.rs
docs/: ARCHITECTURE.md  Architecture.md  Boards.md  Config_Reference.md  DEVELOPER.md  Hardware_Support.md  Installation.md  Machine_Design.md  README.md  implementation-plan.md
hal/isochron-hal/: Cargo.toml  README.md
hal/isochron-hal-rp2040/: Cargo.toml  README.md
hal/isochron-hal-rp2040/src/: adc.rs  flash.rs  gpio.rs  lib.rs  pins.rs  position_stepper.rs  stepper.rs  uart.rs
hal/isochron-hal-stm32f0/: Cargo.toml  README.md
hal/isochron-hal-stm32f0/src/: flash.rs  gpio.rs  i2c.rs  lib.rs  uart.rs
hal/isochron-hal/src/: flash.rs  gpio.rs  i2c.rs  lib.rs  spi.rs  uart.rs
isochron-core/: Cargo.toml
isochron-core/src/: lib.rs
isochron-core/src/config/: calibration.rs  hardware.rs  mod.rs  types.rs
isochron-core/src/motion/: mod.rs  planner.rs  position.rs
isochron-core/src/safety/: mod.rs  monitor.rs
isochron-core/src/scheduler/: executor.rs  mod.rs  segment.rs
isochron-core/src/state/: events.rs  machine.rs  mod.rs
isochron-core/src/traits/: display.rs  heater.rs  mod.rs  motor.rs  stepper.rs
isochron-drivers/: Cargo.toml
isochron-drivers/src/: lib.rs
isochron-drivers/src/accessory/: mod.rs
isochron-drivers/src/heater/: autotune.rs  bang_bang.rs  fixed.rs  gpio.rs  mod.rs  pid.rs
isochron-drivers/src/motor/: ac.rs  dc.rs  mod.rs
isochron-drivers/src/sensor/: mod.rs  ntc100k.rs
isochron-drivers/src/stepper/: mod.rs  tmc2209.rs
isochron-firmware/: Cargo.toml  Embed.toml  Makefile  README.md  build.rs  machine.toml  memory.x
isochron-firmware/.cargo/: config.toml
isochron-firmware/examples/: ac-motor.toml  btt-pico-minimal.toml  btt-pico.toml  custom-rp2040.toml  dc-motor.toml
isochron-firmware/src/: channels.rs  controller.rs  main.rs
isochron-firmware/src/boards/: mod.rs
isochron-firmware/src/components/: mod.rs
isochron-firmware/src/config/: calibration.rs  loader.rs  mod.rs  toml.rs
isochron-firmware/src/display/: mod.rs  protocol.rs  renderer.rs
isochron-firmware/src/tasks/: ac_motor.rs  calibration.rs  controller.rs  dc_motor.rs  display_rx.rs  display_tx.rs  heater.rs  mod.rs  stall_monitor.rs  stepper.rs  tick.rs  tmc.rs  x_stepper.rs  z_stepper.rs
isochron-hal-rp2040/: Cargo.toml
isochron-hal-rp2040/src/: flash.rs  lib.rs  pins.rs  pio.rs  stepper.rs
isochron-protocol/: Cargo.toml
isochron-protocol/src/: events.rs  frame.rs  lib.rs  messages.rs
profiles/shipped/: btt-pico-headless.config  btt-pico.config  pico-ac-motor.config  pico-dc-motor.config  pico-direct-oled.config
