[package]
name = "isochron-drivers"
version = "0.1.0"
edition = "2021"
description = "Hardware driver implementations for Isochron watch cleaner"
license = "GPL-3.0-or-later"

[features]
default = []
defmt = ["dep:defmt", "isochron-core/defmt"]

[dependencies]
isochron-core = { path = "../isochron-core" }
heapless = { workspace = true }
defmt = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }

[dev-dependencies]
