[package]
name = "isochron-firmware"
version = "0.1.0"
edition = "2021"
description = "Isochron watch cleaner firmware for RP2040-based boards"
license = "GPL-3.0-or-later"

[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "isochron-core/defmt",
    "isochron-drivers/defmt",
    "isochron-hal-rp2040/defmt",
    "isochron-protocol/defmt",
]

[dependencies]
# Workspace crates
isochron-core = { path = "../isochron-core", features = ["serde"] }
isochron-drivers = { path = "../isochron-drivers" }
isochron-hal-rp2040 = { path = "../isochron-hal-rp2040" }
isochron-protocol = { path = "../isochron-protocol" }

# Embassy
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-rp = { workspace = true }
embassy-futures = { workspace = true }

# Embedded
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }

# Memory
heapless = { workspace = true }
embedded-alloc = { workspace = true }
static_cell = "2.1"
portable-atomic = { version = "1.13", features = ["critical-section"] }

# Config parsing
# NOTE: toml crate uses alloc::sync::Arc which isn't available on thumbv6m
# Using toml_parser directly for low-level parsing
toml_parser = { version = "1.0", default-features = false }

# Serialization
postcard = { workspace = true }
serde = { workspace = true }

# Debugging
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
panic-probe = { workspace = true, optional = true }

[build-dependencies]
# TOML validation at build time (runs on host, not embedded target)
toml = "0.8"

[[bin]]
name = "isochron-firmware"
path = "src/main.rs"
